Update de la route /createJobOffer pour ajouter une enterprise et un employer si besoin
