# back-end/API/app/repositories/jobOffer_repo.py
@@ -4,8 +4,8 @@ from flask import Flask, jsonify
 
 class JobOfferRepo:
 
-    def createJobOffer(self, data):
-        new_job_offer = JobOffer(**data)
+    def createJobOffer(self, data, employerId):
+        new_job_offer = JobOffer(title=data['title'], description=data['description'], address=data['address'], dateEntryOffice=data['dateEntryOffice'], deadlineApply=data['deadlineApply'], email=data['email'], hoursPerWeek=data['hoursPerWeek'], compliantEmployer=data['compliantEmployer'], internship=data['internship'], offerStatus=data['offerStatus'], offerLink=data['offerLink'], urgent=data['urgent'], active=data['active'], employerId=employerId, scheduleId=data['scheduleId'])
         db.session.add(new_job_offer)
         db.session.commit()
         return jsonify({'message': 'new job offer created'})
